further multiple instances changes

--- a/files/haproxy.cfg
+++ b/files/haproxy.cfg
@@ -34,8 +34,8 @@ defaults
 	errorfile 504 /etc/haproxy/errors/504.http
 
 frontend myfront
-    bind ${HAPROXY}:80
+    bind HAPROXY_IP:80
     default_backend myback
 
 backend myback
-# apache servers go here
+#    server apacheX apache_ip[x]:80
