--- a/ansible/haproxy.yaml
+++ b/ansible/haproxy.yaml
@@ -8,10 +8,11 @@
     apt:
       name: haproxy
       state: present
+      update_cache: yes
 
   - name: copy haproxy.cfg
     copy:
-      src: files/haproxy.cfg
+      src: /tmp/haproxy.cfg
       dest: /etc/haproxy/
     notify: restart_haproxy 
 
