--- a/files/haproxy.cfg
+++ b/files/haproxy.cfg
@@ -34,7 +34,7 @@ defaults
 	errorfile 504 /etc/haproxy/errors/504.http
 
 frontend myfront
-    bind HAPROXY_IP:80
+    bind 0.0.0.0:80
     default_backend myback
 
 backend myback
